update nos makefiles

--- a/Teste-fora/zMkirmod/Makefile
+++ b/Teste-fora/zMkirmod/Makefile
@@ -8,14 +8,15 @@ CFLAGS= -O3 -I$(RSFROOT)/include
 all: build
 
 build: export CC=gcc
-build:
+build: fwi.x
+
+fwi.x: fwi.c ricker.o kirmod.o kirmod2.o
 	gcc -g -D NO_BLAS $(CFLAGS) fwi.c kirmod.o kirmod2.o ricker.o -o fwi.x -lrsf -lm -L$(RSFROOT)/lib
 
 clean:
-	$(MAKE) -C enclave clean
-	$(MAKE) -C host clean
+	rm fwi.x
 
-run:
+run: fwi.x
 	./fwi.x nt=501 dt=0.004 freq=25 refl=rsf/refl.rsf ns=12 s0=1.4 ds=-0.1 nh=64 h0=0.1 dh=0.1 vel=5 gradz=2 type=v >> times.txt
 
 simulate:
