--- a/Teste-fora/zMlinear/Makefile
+++ b/Teste-fora/zMlinear/Makefile
@@ -8,14 +8,15 @@ CFLAGS= -O3 -I$(RSFROOT)/include
 all: build
 
 build: export CC=gcc
-build:
+build: fwi.x
+
+fwi.x: fwi.c linear.o
 	gcc -g -D NO_BLAS $(CFLAGS) fwi.c linear.o -o fwi.x -lrsf -lblas -lm -L$(RSFROOT)/lib
 
 clean:
-	$(MAKE) -C enclave clean
-	$(MAKE) -C host clean
+	rm fwi.x
 
-run:
+run: fwi.x
 	./fwi.x >> times.txt
 
 simulate:
