--- a/Teste-fora/zMunif2/Makefile
+++ b/Teste-fora/zMunif2/Makefile
@@ -8,14 +8,15 @@ CFLAGS= -O3 -I$(RSFROOT)/include
 all: build
 
 build: export CC=gcc
-build:
+build: fwi.x
+
+fwi.x: fwi.c
 	gcc -g -D NO_BLAS $(CFLAGS) fwi.c -o fwi.x -lrsf -lblas -lm -L$(RSFROOT)/lib
 
 clean:
-	$(MAKE) -C enclave clean
-	$(MAKE) -C host clean
+	rm fwi.x
 
-run:
+run: fwi.x
 	./fwi.x d1=0.0101 n1=199 v00=1.508,1.581,1.69,1.826,2.0 >> times.txt
 
 simulate:
