--- a/Teste-dentro-enclave/zMmig2/Makefile
+++ b/Teste-dentro-enclave/zMmig2/Makefile
@@ -15,7 +15,7 @@ clean:
 	$(MAKE) -C host clean
 
 run:
-	host/helloworldhost ./enclave/helloworldenc.signed >> times.txt
+	host/helloworldhost ./enclave/helloworldenc.signed
 
 simulate:
 	host/helloworldhost ./enclave/helloworldenc.signed --simulate
