--- a/Teste-dentro-enclave/zMslice/Makefile
+++ b/Teste-dentro-enclave/zMslice/Makefile
@@ -15,7 +15,7 @@ clean:
 	$(MAKE) -C host clean
 
 run:
-	host/helloworldhost ./enclave/helloworldenc.signed pick=rsf/rms.rsf >> times.txt
+	host/helloworldhost ./enclave/helloworldenc.signed pick=rsf/rms.rsf
 
 simulate:
 	host/helloworldhost ./enclave/helloworldenc.signed --simulate
