--- a/Teste-dentro-enclave/zMunif2/Makefile
+++ b/Teste-dentro-enclave/zMunif2/Makefile
@@ -15,7 +15,7 @@ clean:
 	$(MAKE) -C host clean
 
 run:
-	host/helloworldhost ./enclave/helloworldenc.signed d1=0.0101 n1=199 v00=1.508,1.581,1.69,1.826,2.0 >> times.txt
+	host/helloworldhost ./enclave/helloworldenc.signed d1=0.0101 n1=199 v00=1.508,1.581,1.69,1.826,2.0
 
 simulate:
 	host/helloworldhost ./enclave/helloworldenc.signed --simulate
