Add scons files to makefile and scripts

--- a/Teste-dentro-enclave/fwi/Makefile
+++ b/Teste-dentro-enclave/fwi/Makefile
@@ -1,7 +1,9 @@
 # Copyright (c) Open Enclave SDK contributors.
 # Licensed under the MIT License.
 
-.PHONY: all build clean run simulate gdb
+.PHONY: all build clean run simulate gdb scons
+
+SCONSDIR=../../scons-files
 
 all: build
 
@@ -23,3 +25,11 @@ simulate:
 gdb:
 	/opt/openenclave/bin/oegdb -arg host/helloworldhost ./enclave/helloworldenc.signed
 
+scons:
+	scons --directory=$(SCONSDIR)/fwi/ --clean
+	scons --directory=$(SCONSDIR)/fwi/
+	cp $(SCONSDIR)/fwi/rsf/grads.rsf .
+	cp $(SCONSDIR)/fwi/rsf/illumns.rsf .
+	cp $(SCONSDIR)/fwi/rsf/objs.rsf .
+	cp $(SCONSDIR)/fwi/rsf/shots.rsf .
+	cp $(SCONSDIR)/fwi/rsf/smvel.rsf .
