--- a/Teste-fora/fwi/Makefile
+++ b/Teste-fora/fwi/Makefile
@@ -1,10 +1,10 @@
 # Copyright (c) Open Enclave SDK contributors.
 # Licensed under the MIT License.
 
-.PHONY: all build clean run simulate gdb
+.PHONY: all build clean run simulate gdb scons
 
 CFLAGS= -O3 -I$(RSFROOT)/include
-
+SCONSDIR=../../scons-files/fwi
 all: build
 
 build: export CC=gcc
@@ -17,7 +17,7 @@ clean:
 	rm *.o fwi.x
 
 run: fwi.x
-	./fwi.x shots=shots.rsf grads=grads.rsf illums=illums.rsf objs=objs.rsf < smvel.rsf >> times.txt
+	./fwi.x shots=rsf/shots.rsf grads=rsf/grads.rsf illums=rsf/illums.rsf objs=rsf/objs.rsf < rsf/smvel.rsf >> times.txt
 
 simulate:
 	host/helloworldhost ./enclave/helloworldenc.signed --simulate
@@ -25,3 +25,11 @@ simulate:
 gdb:
 	/opt/openenclave/bin/oegdb -arg host/helloworldhost ./enclave/helloworldenc.signed
 
+scons:
+	scons --directory=$(SCONSDIR) --clean
+	scons --directory=$(SCONSDIR)
+	cp $(SCONSDIR)/grads.rsf rsf/
+	cp $(SCONSDIR)/illumns.rsf rsf/
+	cp $(SCONSDIR)/objs.rsf rsf/
+	cp $(SCONSDIR)/shots.rsf rsf/
+	cp $(SCONSDIR)/smvel.rsf rsf/
