--- a/Teste-dentro-enclave/sfpwd/Makefile
+++ b/Teste-dentro-enclave/sfpwd/Makefile
@@ -1,7 +1,9 @@
 # Copyright (c) Open Enclave SDK contributors.
 # Licensed under the MIT License.
 
-.PHONY: all build clean run simulate gdb
+.PHONY: all build clean run simulate gdb scons
+
+SCONSDIR=../../scons-files/sfpwd
 
 all: build
 
@@ -23,3 +25,8 @@ simulate:
 gdb:
 	/opt/openenclave/bin/oegdb -arg host/helloworldhost ./enclave/helloworldenc.signed
 
+scons:
+	scons --directory=$(SCONSDIR) --clean
+	scons --directory=$(SCONSDIR)
+	cp $(SCONSDIR)/gom-dip.rsf rsf/
+	cp $(SCONSDIR)/gom.rsf rsf/
