--- a/Teste-fora/sfpwd/Makefile
+++ b/Teste-fora/sfpwd/Makefile
@@ -1,9 +1,10 @@
 # Copyright (c) Open Enclave SDK contributors.
 # Licensed under the MIT License.
 
-.PHONY: all build clean run simulate gdb
+.PHONY: all build clean run simulate gdb scons
 
 CFLAGS= -O3 -D NO_BLAS -I$(RSFROOT)/include
+SCONSDIR=../../scons-files/sfpwd
 
 all: build
 
@@ -28,3 +29,8 @@ simulate:
 gdb:
 	/opt/openenclave/bin/oegdb -arg host/helloworldhost ./enclave/helloworldenc.signed
 
+scons:
+	scons --directory=$(SCONSDIR) --clean
+	scons --directory=$(SCONSDIR)
+	cp $(SCONSDIR)/gom-dip.rsf rsf/
+	cp $(SCONSDIR)/gom.rsf rsf/
