--- a/Teste-dentro-enclave/sfeikonal/Makefile
+++ b/Teste-dentro-enclave/sfeikonal/Makefile
@@ -28,4 +28,4 @@ gdb:
 scons:
 	scons --directory=$(SCONSDIR) --clean
 	scons --directory=$(SCONSDIR)
-	cp $(SCONSDIR)/rsf/seg.rsf rsf/in.rsf
+	cp $(SCONSDIR)/seg.rsf rsf/in.rsf
