--- a/Teste-fora/sfunif2/Makefile
+++ b/Teste-fora/sfunif2/Makefile
@@ -9,16 +9,16 @@ SCONSDIR=../../scons-files/sfunif2
 all: build
 
 build: export CC=gcc
-build: fwi.x
+build: main.x
 
-fwi.x: fwi.c
-	gcc -D NO_BLAS $(CFLAGS) fwi.c -o fwi.x -lrsf -lblas -lm -L$(RSFROOT)/lib
+main.x: main.c
+	gcc -D NO_BLAS $(CFLAGS) main.c -o main.x -lrsf -lblas -lm -L$(RSFROOT)/lib
 
 clean:
-	rm *.o fwi.x
+	rm *.o main.x
 
-run: fwi.x
-	./fwi.x d1=0.0101 n1=199 v00=1.508,1.581,1.69,1.826,2.0 >> times.txt
+run: main.x
+	./main.x d1=0.0101 n1=199 v00=1.508,1.581,1.69,1.826,2.0 >> times.txt
 
 simulate:
 	host/helloworldhost ./enclave/helloworldenc.signed --simulate
