--- a/Benchmarks/dentro/recursion/enclave/Makefile
+++ b/Benchmarks/dentro/recursion/enclave/Makefile
@@ -31,17 +31,16 @@ build:
 		--search-path $(INCDIR) \
 		--search-path $(INCDIR)/openenclave/edl/sgx
 	$(CC) -c -D NO_BLAS $(CFLAGS) -DOE_API_VERSION=2 -DNUM=$(NUM) main.c -o main.o
-	objcopy --redefine-sym main=fwi main.o main2.o
 	$(CC) -c -D NO_BLAS $(CFLAGS) -DOE_API_VERSION=2 mylibc.c -o mylibc.o
 	$(CC) -c -D NO_BLAS $(CFLAGS) -DOE_API_VERSION=2 enc.c -o enc.o
 	$(CC) -c $(CFLAGS) -DOE_API_VERSION=2 helloworld_t.c -o helloworld_t.o
-	$(CC) -z muldefs -o helloworldenc helloworld_t.o main2.o -lrsf mylibc.o enc.o $(LDFLAGS)
+	$(CC) -z muldefs -o helloworldenc helloworld_t.o main.o -lrsf mylibc.o enc.o $(LDFLAGS)
 
 sign:
 	oesign sign -e helloworldenc -c helloworld.conf -k private.pem
 
 clean:
-	rm -f enc.o mylibc.o main.o main2.o helloworldenc helloworldenc.signed private.pem public.pem helloworld_t.o helloworld_t.h helloworld_t.c helloworld_args.h
+	rm -f enc.o mylibc.o main.o helloworldenc helloworldenc.signed private.pem public.pem helloworld_t.o helloworld_t.h helloworld_t.c helloworld_args.h
 
 keys:
 	openssl genrsa -out private.pem -3 3072
